--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div style="padding:70px;">
     <h6>Made by : Lovish Bansal (102117148) , Soham Kumar (102117157)</h6>
     <h1>Documentation</h1>
-    <a href="index.html" target="_blank" style="color: white;">Click here for the live demo</a>
+    <a href="live-page.html" target="_blank" style="color: white;">Click here for the live demo</a>
 
 </div>
 
