--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <h3>Lovish Bansal</h3>
     <ul>
         <li>Story Board design</li>
-        <li>Animating objects (fish,food)</li>
+        <li>Animating fishes in the project</li>
         <li>Adding mouse click function</li>
         <li>Styling the documentation website</li>
         <li>Content addition in documentation website</li>
