--- a/index.html
+++ b/index.html
@@ -166,20 +166,55 @@
 <div id="Challenges" style="padding:70px">
     <h2>Challenges</h2>
     <ul>
-        <p><u>Challenge 1</u> : Due to less experience in JavaScript language while at the start of making the project it was difficult to do some tasks and move ahead to make the project.</p>
-        <p><u>Challenge 2</u> : Adding addEventListener for mouse click such that the food appears on the screen when you click.</p>
-        <p><u>Challenge 3</u> : Achieving smooth rendering and animation performance on the HTML5 canvas.</p>
-        <p><u>Challenge 4</u> : Designing an intuitive and user-friendly interface for adding food items and interacting with the simulation</p>
+        <p><u>Challenge 1</u> :  Less Experience in JavaScript.</p><br>
+        <ul>
+        <li>
+            <u>Situation </u>: The project involves building a complex interactive and functional JavaScript program. However, lacking sufficient expertise in the language posed a challenge in initiating the project.
+        </li>
+        <li>
+            <u>Task </u>: To understand and implement various JavaScript concepts such as drawing shapes on Canvas, event handling and adding smooth transitions.
+        </li>
+        <li>
+            <u>Action </u>: Learned from online resources such as Youtube tutorials, documentation and help from friends.
+        </li>
+        <li>
+            <u>Result </u>: Successfully dividing tasks into smaller steps, learn concepts as we progressed using online resources and regularly practice.
+        </li>
     </ul>
-    <h2>Overcoming Challenges</h2>
-    <ul>
-        <li>Break tasks into smaller steps, learn concepts as you progress using online resources, and regularly practice coding to reinforce skills.</li>
-        <li>Experimented with small code snippets to test and refine our implementation until we reached the desired functionality.</li>
-        <li>Simplify complex calculations, such as collision detection to minimize computational overhead. Use efficient algorithms and data structures to optimize performance.</li>
-        <li>Create prototypes to visualize and test different interface layouts, interactions, and functionalities before implementing them in the final project.</li>
+        <br>
+        <p><u>Challenge 2</u> : Implementing Event Listener</p><br>
+        <ul>
+        <li>
+            <u>Situation </u>: While developing the project, one of the tasks involves implementing functionality where food appears on the screen upon mouse-clicking events. This task required a good understanding of event handling.
+        </li>
+        <li>
+            <u>Task </u>: To implement an event listener for mouse clicks that triggers the appearance of food on the screen when the user interacts with the Canvas template. This involves understanding how to use JavaScript to detect mouse click events and dynamically manipulate the HTML and CSS to display the food item at the clicked location.
+        </li>
+        <li>
+            <u>Action </u>: Study the concept of event listeners in JavaScript, focusing on how they can be used to detect and respond to user interactions such as mouse clicks.
+        </li>
+        <li>
+            <u>Result </u>: Upon successful implementation of the event listener for mouse clicks, the project is exhibiting the desired behavior: whenever a user clicks anywhere on the screen, food will appear at the clicked location.
+        </li>
+    </ul>
+        <br>
+        <p><u>Challenge 3</u> : Achieving smooth animation and design</p><br>
+        <ul>
+            <li>
+                <u>Situation </u>: Implementing smooth rendering and animation performance are crucial for delivering a good user experience. However, for achieving this performance on the canvas was challenging, due to limited experience in graphics programming and canvas coding.
+            </li>
+            <li>
+                <u>Task </u>: To add smooth rendering and animation on the HTML5 canvas. This involved understanding the factors that affect canvas performance and implementing strategies to optimize rendering and animation efficiency.
+            </li>
+            <li>
+                <u>Action </u>: Used efficient function drawing method such as a collectively calling all the functions in 'draw()'. Set up a requestAnimationFrame loop to control the animation frame rate and ensure smooth animation.
+            </li>
+            <li>
+                <u>Result </u>: Upon successful implementation of optimization techniques, the project is exhibiting smooth rendering and animation performance on the HTML5 canvas, providing users with an engaging and responsive visual experience.
+            </li>
+        </ul>
     </ul>
 </div>
-<hr>
 
 <div id="Roles" style="padding:70px">
     <h2>Our Roles</h2>
